# glutes

Bld/: clean.bat
Bld/EVC4.0/: glutes.vcp  glutes.vcw  glutes_static.vcp
Bld/VC7.1/: glutes.sln  glutes.vcproj  glutes_static.vcproj
Bld/VC8.0/: glutes.sln  glutes.vcproj  glutes_static.vcproj
Bld/linux-x11/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  libtool
Bld/ubuntu/: Makefile
Doc/: Doxyfile  main.txt
Doc/html/: files.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  glutes_8h-source.html  glutes_8h.html  index.html  main_8txt.html
Inc/GLES/: glutes.h
Lib/ppcarmv4rel/: glutes.exp  glutes.lib  glutes_static.lib
Lib/sparmv4rel/: glutes.exp  glutes.lib  glutes_static.lib
Lib/x86Rel/: glutes.exp  glutes.lib  glutes_static.lib
Sample/: HIRES.rc  readme.txt  resource.h  sample.cpp  sample_unix.cpp
Sample/EVC4.0/: sample.vcp  (+1 more)
Src/: Makefile  glutes_callbacks.c  glutes_cursor.c  glutes_display.c  glutes_ext.c  glutes_font.c  glutes_font_data.c  glutes_gamemode.c  glutes_geometry.c.disabled  glutes_glutfont_definitions.c  glutes_init.c  glutes_internal.h  glutes_joystick.c  glutes_main.c  glutes_menu.c  glutes_menugl.c  glutes_misc.c  glutes_overlay.c  glutes_shape.c  glutes_shapex.c  glutes_state.c  glutes_stroke_mono_roman.c  glutes_stroke_mono_roman_fixed.c  glutes_stroke_roman.c  glutes_stroke_roman_fixed.c  glutes_structure.c  glutes_teapot.c.disabled  glutes_videoresize.c  glutes_window.c
debian/: README.Debian  changelog  control  copyright  files  libglutes1.substvars  rules
(+4 files in other folders)
